Bug Fix
Text in simple search combo box was not visible

--- a/hotspringsapp/static/gns.css
+++ b/hotspringsapp/static/gns.css
@@ -871,6 +871,12 @@ height: 100%;
   background-color:rgba(29,155,171,0.75);
 }
 
+.background
+{
+  position: relative;
+  background-color: white;
+}
+
 .opaque 
 {
   background-color:#1D9BAB; 
@@ -978,3 +984,4 @@ figcaption a
    color:white;
    
 }
+
